<resources>
    <string name="app_name">Popular Movies</string>
    <string name="transition_name">Shared Element Transition</string>

    <!-- Detail  -->
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis ullamcorper ante, vitae mattis libero. Proin eu libero at justo interdum tristique sit amet in sapien. In dignissim congue nunc eu commodo. Suspendisse tempus finibus enim id venenatis.</string>
    <string name="detail_header_title">Movie Title</string>
    <string name="overview_label">Overview:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="original_title_label">Original Title:</string>
    <string name="movie_language_label">Original Language:</string>
    <string name="similar_movies_label">Similar movies</string>
    <string name="no_reviews_label">There are currently no reviews for this movie.</string>

    <string name="actor_name_placeholder">Actor Name</string>
    <string name="character_name_placeholder">Character Name</string>
    <string name="movie_poster_placeholder">Movie Poster</string>
    <string name="movie_rating_placeholder">Movie Rating</string>
    <string name="movie_count_placeholder">3.4</string>
    <string name="movie_title_placeholder">Movie Title</string>
    <string name="tv_actor_placeholder">3.4</string>
    <string name="vote_count_placeholder">1422</string>
    <string name="spinner_placeholder">Spinner</string>
    <string name="movie_release_date_placeholder">01–12–2018</string>
    <string name="language_placeholder">English</string>
    <string name="genre_placeholder">Genre</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_animation_label">Animation associated with the main list</string>
    <string name="layout_animation">Layout Animation</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_favourite">Favourite</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Network -->
    <string name="error_retrieving_movies">Failed to get movies</string>
    <string name="network_error">Ooops! There was a a problem connecting to the internet. Please check your internet connection and try again.</string>
    <string name="network_error_label">No network connection, please try again.</string>
    <string name="network_error_button_label">Try Again</string>

    <!-- Content Descriptions -->
    <string name="favourite_icon_content_description">Favourite Icon</string>
    <string name="movie_image_content_description">Movie Image</string>
    <string name="movie_vote_icon_content_description">Movie Vote Icon</string>
    <string name="no_image_content_description">No Image</string>

</resources>
