<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/ll_header"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:minHeight="96dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster_placeholder" />

        <TextView
            android:id="@+id/tv_header_title"
            style="@style/TextAppearance.PopularMovies.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/detail_header_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_rating_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_title"
            app:srcCompat="@drawable/ic_star_white_24dp"
            android:contentDescription="@string/movie_rating_placeholder" />

        <TextView
            android:id="@+id/tv_rating_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/movie_count_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/iv_rating_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_rating_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_rating_icon" />

        <ImageView
            android:id="@+id/iv_vote_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_rating_icon"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_count"
            app:layout_constraintTop_toTopOf="@+id/iv_rating_icon"
            app:srcCompat="@drawable/ic_thumb_up_white_24dp"
            android:contentDescription="@string/movie_vote_icon_content_description" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/vote_count_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vote_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_vote_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_vote_icon" />

        <TextView
            android:id="@+id/tv_genre_ids"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_rating_icon" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        app:layout_collapseMode="pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

</LinearLayout>


